--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
   </head>
 
-  <body>
+  <body class="horizontal-nav skin-megna-dark fixed-layout">
+    <div id="main-wrapper">
+      <%= render partial: '/static_page/header' %>
+      <%= render partial: '/static_page/left_sidebar'%>
     <%= yield %>
   </body>
 </html>
