--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%#= javascript_include_tag "application" 'data-turbolinks-track' => true %>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+
   </head>
 
   <body>
