--- a/app/views/static_page/_header.html.erb
+++ b/app/views/static_page/_header.html.erb
@@ -21,12 +21,37 @@
       </ul>
       <ul class="navbar-nav my-lg-0">
         <!-- User profile and search -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img src="http://www.wrappixel.com/demos/admin-templates/elegant-admin/assets/images/users/1.jpg" alt="user" class="img-circle" width="30">
-          </a>
+          </a> -->
 
-          <div class="dropdown-menu dropdown dropdown-menu-right user-dd animated flipInY">
+          <li> 
+            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="hide-menu">
+              <img src="http://www.wrappixel.com/demos/admin-templates/elegant-admin/assets/images/users/1.jpg" alt="user" class="img-circle" width="30"></span>
+            </a>
+            <ul aria-expanded="false" class="collapse">
+              <span class="with-arrow"><span class="bg-primary"></span></span>
+              <div class="d-flex no-block align-items-center p-15 bg-primary text-white m-b-10">
+                  <div class=""><img src="" alt="user" class="img-circle" width="60"></div>
+                  <div class="m-l-10">
+                      <h4 class="m-b-0">Steave Jobs</h4>
+                      <p class=" m-b-0"><a href="http://www.wrappixel.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="8bfdeaf9fee5cbece6eae2e7a5e8e4e6">[email&#160;protected]</a></p>
+                  </div>
+              </div>
+              <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
+              <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
+              <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i> Inbox</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="javascript:void(0)"><i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
+              <div class="dropdown-divider"></div>
+              <div class="p-l-30 p-10"><a href="javascript:void(0)" class="btn btn-sm btn-success btn-rounded">View Profile</a></div>
+            </ul>
+          </li>
+
+          <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
               <span class="with-arrow"><span class="bg-primary"></span></span>
               <div class="d-flex no-block align-items-center p-15 bg-primary text-white m-b-10">
                   <div class=""><img src="" alt="user" class="img-circle" width="60"></div>
