client crud added

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Clients#index</h1>
-<p>Find me in app/views/clients/index.html.erb</p>
+<div class="row">
+	<div class="col-12">
+	  <div class="card">
+	    <div class="card-body">
+				<div class="table-responsive m-t-40">
+
+				  <table id="example23" class="desk-table display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+				  	<thead>
+					    <tr>
+				        <th>Name</th>
+				        <th>Email</th>
+				        <th>Contact</th>
+				        <th>Country</th>
+				        <th colspan="3">Actions</th>
+					    </tr>
+						</thead>
+						<tbody>
+							<% @clients&.each do |client| %>
+								<tr>
+					        <td><%= client&.client_name %></td>
+					        <td><%= client&.client_email %></td>
+					        <td><%= client&.client_contact %></td>
+					        <td><%= client&.country %></td>
+					        <td><%= link_to "Show", client_path(client), remote: true, class: 'btn btn-warning'%></td>
+					        <td><%= link_to "Edit",edit_client_path(client), class: "btn btn-primary"%></td>
+					        <td><%= button_to "Delete", client, method: :delete, class: "btn btn-danger", data:{ confirm: 'Are you sure you want to delete this?' } %></td>
+					    	</tr>
+							<% end %>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal" style="display:none;">
+</div>
