--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Clients#new</h1>
-<p>Find me in app/views/clients/new.html.erb</p>
+<%= javascript_include_tag "clients"  %>
+<%= form_for @client do |f| %>
+	<%= render "form", f: f %>
+<% end %>
+
+<script type="text/javascript">
+	$(document).on('ready',function(){
+		Clients.form.formValidation();
+	});
+</script>
