--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,26 @@
       <% end %>
       <!-- Page wrapper  -->
       <div class="page-wrapper">
-        <%= yield %>
+        <!-- Container fluid  -->
+        <div class="container-fluid">
+          <!-- Bread crumb and right sidebar toggle -->
+          <div class="row page-titles">
+            <div class="col-md-5 align-self-center">
+                <h4 class="text-themecolor">Dashboard 1</h4>
+            </div>
+            <div class="col-md-7 align-self-center text-right">
+              <div class="d-flex justify-content-end align-items-center">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                  <li class="breadcrumb-item active">Dashboard 1</li>
+                </ol>
+                <button type="button" class="btn btn-success d-none d-lg-block m-l-15"><i class="fa fa-plus-circle"></i> Create New</button>
+              </div>
+            </div>
+          </div>
+          <%= yield %>
+        </div>
+
       </div>
   </body>
 </html>
