--- a/app/views/static_page/_left_sidebar.html.erb
+++ b/app/views/static_page/_left_sidebar.html.erb
@@ -18,21 +18,22 @@
             <li><a href="index5.html">Cryptocurrency</a></li>
           </ul>
         </li>
-        <li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-grid2"></i><span class="hide-menu">Apps</span></a>
+        <li>
+          <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
+            <i class="ti-layout-accordion-merged"></i><span class="hide-menu">Employee</span>
+          <% end %>
           <ul aria-expanded="false" class="collapse">
-            <li><a href="app-calendar.html">Calendar</a></li>
-            <li><a href="app-chat.html">Chat app</a></li>
-            <li><a href="app-ticket.html">Support Ticket</a></li>
-            <li><a href="app-contact.html">Contact / Employee</a></li>
-            <li><a href="app-contact2.html">Contact Grid</a></li>
-            <li><a href="app-contact-detail.html">Contact Detail</a></li>
-            <li><a href="javascript:void(0)" class="has-arrow">Inbox</a>
-                <ul aria-expanded="false" class="collapse">
-                    <li><a href="app-email.html">Mailbox</a></li>
-                    <li><a href="app-email-detail.html">Mailbox Detail</a></li>
-                    <li><a href="app-compose.html">Compose Mail</a></li>
-                </ul>
-            </li>
+            <li><%= link_to 'Employee List',employees_path %></li>
+            <li><%= link_to 'New Employee', new_employee_path %></li>
+          </ul>
+        </li>
+        <li>
+          <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
+            <i class="ti-layout-accordion-merged"></i><span class="hide-menu">Project</span>
+          <% end %>
+          <ul aria-expanded="false" class="collapse">
+            <li><%= link_to 'Project List',projects_path %></li>
+            <li><%= link_to 'New Project', new_project_path %></li>
           </ul>
         </li>
         <li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-accordion-merged"></i><span class="hide-menu">Tables</span></a>
