--- a/app/views/static_page/_indexraw1.html.erb
+++ b/app/views/static_page/_indexraw1.html.erb
@@ -44,26 +44,26 @@
       <h4 class="card-title">Reports</h4>
     </div>
     <div class="d-flex no-block p-15 align-items-center">
-      <div class="round round-info"><i class="icon-wallet font-16"></i></div>
+      <div class="round round-info"><i class="fa fa-user"></i></div>
       <div class="m-l-10 ">
-        <h3 class="m-b-0">$18090</h3>
-        <h6 class="text-muted font-light m-b-0">Your last year total Income</h6> 
+        <h3 class="m-b-0"><%= total_emp_count %></h3>
+        <h6 class="text-muted font-light m-b-0">Your company's total Employees</h6> 
       </div>
     </div>
     <hr>
     <div class="d-flex no-block p-15 align-items-center">
-      <div class="round round-primary"><i class="icon-umbrella font-16"></i></div>
+      <div class="round round-primary"><i class="ti-view-list-alt"></i></div>
       <div class="m-l-10">
-        <h3 class="m-b-0">18%</h3>
-        <h6 class="text-muted font-light m-b-0">Your site bounce rate</h6>
+        <h3 class="m-b-0"><%= total_project_count %></h3>
+        <h6 class="text-muted font-light m-b-0">Your company's total projects</h6>
       </div>
     </div>
     <hr>
     <div class="d-flex no-block p-15 m-b-15 align-items-center">
-      <div class="round round-danger"><i class="icon-chart font-16"></i></div>
+      <div class="round round-danger"><i class="fa fa-code"></i></div>
       <div class="m-l-10">
-        <h3 class="m-b-0">21090</h3>
-        <h6 class="text-muted font-light m-b-0">Your last year site visits</h6>
+        <h3 class="m-b-0"><%= total_technology_count %></h3>
+        <h6 class="text-muted font-light m-b-0">Your company's total Technologies</h6>
       </div>
     </div>
   </div>
