--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,16 @@
 .bg-orange {
 	background: orange;
 }
+
+.avatar-circle {
+  width: 45px;
+  height: 45px;
+  text-align: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  background-color: rgba(255,255,255,0.15);
+  margin: 0px 7px 0px 0;
+  font-size: 28px;
+  line-height: 44px;
+}
