--- a/app/views/static_page/_left_sidebar.html.erb
+++ b/app/views/static_page/_left_sidebar.html.erb
@@ -9,27 +9,31 @@
     <!-- Sidebar navigation-->
     <nav class="sidebar-nav">
       <ul id="sidebarnav">
-        <li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="icon-speedometer"></i><span class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan">4</span></span></a>
-          <ul aria-expanded="false" class="collapse">
-            <li><a href="index-2.html">Minimal</a></li>
-            <li><a href="index2.html">Analytical</a></li>
-            <li><a href="index3.html">Demographical</a></li>
-            <li><a href="index4.html">Modern</a></li>
-            <li><a href="index5.html">Cryptocurrency</a></li>
-          </ul>
+        <li>
+          <%= link_to root_url, class: 'has-arrow waves-effect waves-dark' do %>
+            <i class="icon-speedometer"></i>Dashboard 
+          <% end %>
         </li>
         <li>
           <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
-            <i class="ti-layout-accordion-merged"></i><span class="hide-menu">Employee</span>
+            <i class="fa fa-user"></i><span class="hide-menu">Employee</span>
           <% end %>
           <ul aria-expanded="false" class="collapse">
-            <li><%= link_to 'Employee List',employees_path %></li>
-            <li><%= link_to 'New Employee', new_employee_path %></li>
+            <li>
+              <%= link_to employees_path do %>
+                <i class="fa fa-users"></i><span class="hide-menu">Employee List</span>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_employee_path do %>
+                <i class="fa fa-user-plus"></i><span class="hide-menu">New Employee</span>
+              <% end %>
+            </li>
           </ul>
         </li>
         <li>
           <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
-            <i class="ti-layout-accordion-merged"></i><span class="hide-menu">Project</span>
+            <i class="ti-view-list-alt"></i><span class="hide-menu">Project</span>
           <% end %>
           <ul aria-expanded="false" class="collapse">
             <li><%= link_to 'Project List',projects_path %></li>
@@ -38,18 +42,20 @@
         </li>
         <li>
           <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
-            <i class="ti-layout-accordion-merged"></i><span class="hide-menu">Client</span>
+            <i class="fa fa-user-circle-o"></i><span class="hide-menu">Client</span>
           <% end %>
           <ul aria-expanded="false" class="collapse">
             <li><%= link_to 'Client List', clients_path %></li>
             <li><%= link_to 'New Client', new_client_path %></li>
           </ul>
         </li>
-        <li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu">Widgets</span></a>
+        <li>
+          <%= link_to '', class: 'has-arrow waves-effect waves-dark' do %>
+            <i class="fa fa-code"></i><span class="hide-menu">Technology </span>
+          <% end %>
           <ul aria-expanded="false" class="collapse">
-            <li><a href="widget-data.html">Data Widgets</a></li>
-            <li><a href="widget-apps.html">Apps Widgets</a></li>
-            <li><a href="widget-charts.html">Charts Widgets</a></li>
+            <li><%= link_to 'Technology List', technologies_path %></li>
+            <li><%= link_to 'New Technology', new_technology_path %></li>
           </ul>
         </li>
       </ul>
