--- a/app/views/static_page/_left_sidebar.html.erb
+++ b/app/views/static_page/_left_sidebar.html.erb
@@ -38,6 +38,8 @@
           <ul aria-expanded="false" class="collapse">
             <li><%= link_to 'Project List',projects_path %></li>
             <li><%= link_to 'New Project', new_project_path %></li>
+            <li><%= link_to 'Assign Employee to Project', new_assignment_path %></li>
+            <li><%= link_to 'Project wise Employee List', assignments_path %></li>
           </ul>
         </li>
         <li>
