--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,2 +1,57 @@
-<h1>Assignments#index</h1>
-<p>Find me in app/views/assignments/index.html.erb</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Project wise Employee List</h4>
+				<div class="table-responsive m-t-40">
+				  <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+				  	<thead>
+					    <tr>
+				        <th>Project</th>
+				        <th>Start Date</th>
+				        <th>End Date</th>
+				        <th>Employees</th>
+				        <th>Client</th>
+				        <th>Technologies</th>
+				        <th>Action</th>
+					    </tr>
+						</thead>
+						<tbody>
+							<% @assignments&.each do |assignment| %>
+								<tr>
+					        <td><%= assignment&.project&.project_name %></td>
+					        <td><%= assignment&.start_date %></td>
+					        <td><%= assignment&.end_date %></td>
+					        <td><% assignment&.employees.each do |employee| %>
+					        	<span class="label bg-orange"><%= employee&.username %></span><br>
+					        	<% end %>
+					        </td>
+					        <td><%= assignment&.project&.client&.client_name %></td>
+					        <td><% assignment&.project.technologies.each do |technology| %>
+					        	<span class="label label-inverse"><%= technology&.name %></span><br>
+					        	<% end %>
+					        </td>
+					        <td>
+					        	<%= link_to assignment_path(assignment),remote: true do %> 
+					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>&nbsp;&nbsp;&nbsp;
+					        	<% end %>
+					        	<%= link_to edit_assignment_path(assignment) do %> 
+					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>&nbsp;&nbsp;&nbsp;
+					        	<% end %>
+					        	<%= link_to assignment_path(assignment), method: :delete do %> 
+					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
+					        	<% end %>
+					        	<%#= link_to "Edit",edit_assignment_path(assignment), class: "btn btn-success"%>
+					        	<%#= button_to "Delete", assignment, method: :delete,  class: "btn btn-danger",data: { confirm: 'Are you sure you want to delete this?' } %>
+					        </td>
+					    	</tr>
+							<% end %>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal"></div>
