--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "rails" %>
 <div class="row">
 	<div class="col-12">
 	  <div class="card">
@@ -11,7 +12,7 @@
 				        <th>Email</th>
 				        <th>Contact</th>
 				        <th>Country</th>
-				        <th colspan="3">Actions</th>
+				        <th>Actions</th>
 					    </tr>
 						</thead>
 						<tbody>
@@ -21,9 +22,17 @@
 					        <td><%= client&.client_email %></td>
 					        <td><%= client&.client_contact %></td>
 					        <td><%= client&.country %></td>
-					        <td><%= link_to "Show", client_path(client), remote: true, class: 'btn btn-warning'%></td>
-					        <td><%= link_to "Edit",edit_client_path(client), class: "btn btn-primary"%></td>
-					        <td><%= button_to "Delete", client, method: :delete, class: "btn btn-danger", data:{ confirm: 'Are you sure you want to delete this?' } %></td>
+					        <td>
+					        	<%= link_to client_path(client),remote: true do %> 
+					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>   
+					        	<% end %>
+					        	<%= link_to edit_client_path(client) do %> 
+					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
+					        	<% end %>
+					        	<%= link_to client_path(client), method: :delete do %> 
+					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
+					        	<% end %>
+					        </td>
 					    	</tr>
 							<% end %>
 						</tbody>
