--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "rails" %>
   <div class="row">
     <div class="col-12">
       <div class="card">
@@ -14,7 +15,7 @@
 						        <th>Secondary Technology</th>
 						        <th>Role</th>
 						        <th>Change Role</th>
-						        <th colspan="3">Action</th>
+						        <th>Action</th>
 						    </tr>
 							</thead>
 							<tbody>
@@ -30,8 +31,15 @@
 						        		<%= select_tag "role",options_for_select(@roles.map{|role| [role&.name,role&.id]}, selected: employee&.roles&.first&.id),id: "select-#{employee&.id}", data: { value: "#{employee&.id}"} %>
 						        		<%= button_tag "Change Role", class: "btn btn-warning change-employee-role", id: "change_role_btn-#{employee&.id}", data: { value: "#{employee&.id}"}  %>
 						        </td>
-						        <td><%= link_to "Edit",edit_employee_path(employee), class: "btn btn-primary"%></td>
-						        <td><%= button_to "Delete", employee, method: :delete,  class: "btn btn-danger",data: { confirm: 'Are you sure you want to delete this?' } %></td>
+						        <td><%= link_to employee_path(employee),remote: true do %> 
+					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>   
+					        	<% end %>
+					        	<%= link_to edit_employee_path(employee) do %> 
+					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
+					        	<% end %>
+					        	<%= link_to employee_path(employee), method: :delete do %> 
+					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
+					        	<% end %></td>
 						    	</tr>
 								<% end %>
 							</tbody>
@@ -46,7 +54,6 @@
 	$(document).on('ready',function(){
 		$(".change-employee-role").on("click", function(){
 			$(this).parent().find('select option:selected').text();
-			debugger;
 				$.ajax({
 	         url: '/change_role.js',
 	         method: 'GET',
