--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,4 @@
+ <%= javascript_include_tag "rails" %>
   <div class="row">
     <div class="col-12">
       <div class="card">
@@ -32,9 +33,15 @@
 						        	<span class="label label-inverse"><%= technology&.name%></span><br>
 						        	<% end %>
 						        </td>
-						        <td><%= link_to "Show",project_path(project),remote: true, class: "btn btn-warning" %></td>
-						        <td><%= link_to "Edit",edit_project_path(project), class: "btn btn-success"%></td>
-						        <td><%#= link_to "Delete",project_path(project),method: :delete, data: { confirm: 'Are you sure you want to delete this?' },class: "btn btn-danger" %><%= button_to "Delete", project, method: :delete,  class: "btn btn-danger",data: { confirm: 'Are you sure you want to delete this?' } %></td>
+						        <td><%= link_to project_path(project),remote: true do %> 
+					        		<i class="fa fa-eye icon-color-size" data-toggle="tooltip" data-placement="top" title="Show"></i>   
+					        	<% end %>
+					        	<%= link_to edit_project_path(project) do %> 
+					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
+					        	<% end %>
+					        	<%= link_to project_path(project), method: :delete do %> 
+					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
+					        	<% end %></td>
 						    	</tr>
 								<% end %>
 							</tbody>
