--- a/app/views/static_page/_header.html.erb
+++ b/app/views/static_page/_header.html.erb
@@ -69,29 +69,15 @@
         </li>
       </ul> -->
         <!-- User profile and search -->
-      <li><%= link_to destroy_employee_session_path, class: 'dropdown-item', method: :delete do %>
-        <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout
-      <% end %></li>
-      <ul class="navbar-nav my-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="avatar-circle">
-            <span class="initials"><%= current_employee.username[0].upcase%></span>
-          </div></a>
-            <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
-                <span class="with-arrow"><span class="bg-primary"></span></span>
-                <div class="d-flex no-block align-items-center p-15 bg-primary text-white m-b-10">
-                    <div class="m-l-10">
-                        <h4 class="m-b-0"><%= current_employee.username %></h4>
-                        <p class=" m-b-0"><%= current_employee.email %></p>
-                    </div>
-                </div>
-                <%#= link_to show_path, class: "dropdown-item" do%><i class="fa fa-user-circle m-r-5 m-l-5"></i> My Profile<%#end%>
-                <%#= link_to destroy_user_session_path,class: "dropdown-item", method: :delete do %><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout <%#end%>
-            </div>
-          </li>
-        </ul>
-
+      <% if employee_signed_in? %>  
+        <%= button_to destroy_employee_session_path, class: 'dropdown-item', method: :delete do %>
+          <i class="fa fa-power-off m-r-5 m-l-5"></i> Logout
+        <% end %>
+      <% else %>
+        <%= link_to new_employee_session_path, class: 'dropdown-item' do %>
+          <i class="fa fa-power-off m-r-5 m-l-5"></i> Login
+        <% end %>
+      <% end %>
 
     </div>
   </nav>
