--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -39,7 +39,7 @@
 					        	<%= link_to edit_project_path(project) do %> 
 					        		<i class="fa fa-edit icon-color-size" data-toggle="tooltip" data-placement="top" title="Edit"></i>   
 					        	<% end %>
-					        	<%= link_to project_path(project), method: :delete do %> 
+					        	<%= link_to project_path(project), method: :delete, data: {confirm: 'Are you sure? '} do %> 
 					        		<i class="fa fa-trash icon-color-size" data-toggle="tooltip" data-placement="top" title="Delete"></i>
 					        	<% end %></td>
 						    	</tr>
