--- a/app/views/clients/show.js.erb
+++ b/app/views/clients/show.js.erb
@@ -1,2 +1,2 @@
-$('.modal').html('<%= escape_javascript(render "show", object: @client) %>');
+$('.modal').html('<%= escape_javascript(render "show", client: @client) %>');
 $('.modal').show();
