--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="modal"></div>
 <script type="text/javascript">
 	$(document).on('ready',function(){
 		$(".change-employee-role").on("click", function(){
