--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 <div class="form-group m-t-40 row">
-	<%= f.label :employee_id, class: "col-2 col-form-label" %>
+	<%= f.label :project_manager, class: "col-2 col-form-label" %>
 	<div class="col-10">
 		<%= f.select :employee_id, Employee.all.collect { |p| [ p.username, p.id ] }, {include_blank: "select"}, {class: "select2 form-control custom-select",} %>
 	</div>
