--- a/app/views/projects/show.js.erb
+++ b/app/views/projects/show.js.erb
@@ -1,2 +1,2 @@
-$('.modal').html('<%= escape_javascript(render "show_projects", object: @project) %>');
+$('.modal').html('<%= escape_javascript(render "show_projects", project: @project) %>');
 $('.modal').show();
